# DEISGR2

./: README.md  controller.py  imageSub.py  motion_detection.py  requirements.txt
Hexy/: HexyColorDetect.py  state_machine.py  walk.py
Labs/: HexyColorDetect.py  brake_light.c  controller.py
Labs/Tello-ORB-SLAM-3-ROS2/local_camera_ros2/src/: launch.py
Labs/Tello-ORB-SLAM-3-ROS2/local_camera_ros2/src/my_camera_publisher/: setup.py
Labs/Tello-ORB-SLAM-3-ROS2/orb-slam3-ros2/: Dockerfile  README.md
Labs/Tello-ORB-SLAM-3-ROS2/path_planner_ros2/: CMakeLists.txt  Dockerfile
Labs/Tello-ORB-SLAM-3-ROS2/siamese-network-ros2/: Dockerfile  package.xml  setup.py  train_model.py
Labs/Tello-ORB-SLAM-3-ROS2/tello-ros2/: Dockerfile
Labs/Tello-ORB-SLAM-3-ROS2/tello-ros2/src/: launch.py
Labs/Tello-ORB-SLAM-3-ROS2/tello-ros2/src/tello/: LICENSE.txt
Labs/exlcm/: exlcm_message_t.h  exlcm_object_t.c  exlcm_object_t.h  message_t.py  object_t.lcm  object_t.py
Labs/lab3/: exlcm_example_t.c  exlcm_example_t.h  listener.c  send_message.c
Tello-ORB-SLAM-3-ROS2/local_camera_ros2/src/my_camera_publisher/: package.xml  setup.cfg
Tello-ORB-SLAM-3-ROS2/local_camera_ros2/src/my_camera_publisher/my_camera_publisher/: camera_publisher.py
Tello-ORB-SLAM-3-ROS2/orb-slam3-ros2/: adapt_send_data.patch  excludefile.txt
Tello-ORB-SLAM-3-ROS2/orb-slam3-ros2/config/: tello.yaml
Tello-ORB-SLAM-3-ROS2/path_planner_ros2/: package.xml
Tello-ORB-SLAM-3-ROS2/path_planner_ros2/src/: path_planner_node.cpp
Tello-ORB-SLAM-3-ROS2/siamese-network-ros2/similarity_detector/: l1_distance_layer.py  similarity_detector_node.py
Tello-ORB-SLAM-3-ROS2/tello-ros2/src/: rviz.rviz
Tello-ORB-SLAM-3-ROS2/tello-ros2/src/tello/: package.xml  setup.cfg  setup.py
car_DEIS/: gpsImagetest.py  ps5_controller_test.py  publisher_member_function.py  subscriber_GPS.py  subscriber_member_function.py
car_DEIS/final scripts/: publisher_GPS.py  subscriber_GPS.py
car_DEIS/serial_test_combined/: serial_test_combined.ino
exlcm/: exlcm_heartbeat_t.h  heartbeat_t.lcm  heartbeat_t.py  message_t.lcm
lab3/: exlcm_heartbeat_t.c  exlcm_message_t.c  heartbeat_listener.c  heartbeat_sim.c  questions.txt
(+4 files in other folders)
