<?xml version="1.0"?>
<package format="3">
  <name>similarity_detector</name>
  <version>0.0.1</version>
  <description>ROS2 package for detecting similar objects using a Siamese model</description>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>ament_cmake</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>tensorflow</exec_depend>
  <exec_depend>opencv-python</exec_depend>
</package>
